<resources>
    <string name="app_name">AndronityProject</string>
    <string name="lanjutkan_dengan_facebook">Lanjutkan dengan Facebook</string>
    <string name="email_telepon_username">Email/Telepon/Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_cepat_dengan">Login Cepat Dengan</string>
    <string name="login_melalui_google">Login dengan Google</string>
    <string name="nama_lengkap" />
    <string name="username" />
    <string name="sandi" />
    <string name="konfirmasi_sandi">konfirmasi sandi</string>
    <string name="masukkan_nama_lengkap">masukkan nama lengkap</string>
    <string name="masukkan_username">masukkan username</string>
    <string name="sandi_anda">sandi</string>
    <string name="Daftar" />
</resources>
