<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <LinearLayout
        android:id="@+id/linearAtas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_telepon_username" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_orange"
            android:text="@string/login"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="#737272" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_cepat_dengan" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="#737272" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_btn_google"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="10dp"
            android:text="@string/login_melalui_google" />

        <Button
            android:id="@+id/btnLoginFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_btn_facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingLeft="10dp"
            android:text="@string/lanjutkan_dengan_facebook" />
    </LinearLayout>


</RelativeLayout>